--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "nodemon": "^2.0.20",
     "pm2": "^5.2.0",
     "prettier": "^2.7.1",
+    "prisma": "^4.8.1",
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.7.0",
     "tsconfig-paths": "^4.0.0",
